_sass/_base.scss
*, *:before, *:after {
	padding: 0;
	margin: 0;
	box-sizing: inherit;
	vertical-align: baseline;
}

html {
	box-sizing: border-box;
	line-height: 1.4;
}

body {
	font-family: $font-default;
	background-color: $light;
	margin: 1em;
	font-weight: 300;
}

a {
	color: $accent;
	text-decoration: none;
	transition: background-color 0.4s ease;
	background-color: transparentize($accent, 1);
	padding: $margin-tiny;

	&:hover {
		background-color: transparentize($accent, .8);
		border-radius: 2px;
	}

	&.invisible {
		color: $dark !important;
		background-color: transparentize($accent, 1) !important;
	}

	&:visited {
		color: darken($accent, 5%);
	}
}

header {
	@extend %clearfix;
	width: 100%;

	display: flex;
	justify-content: center;
	flex-basis: 10%;
	align-items: baseline;

	@media all and (max-width: 500px) {
		flex-direction: column;
	}

}

h1 {
	float: left;
	margin: 1em 0;
}

h3 {
	margin-bottom: 1em;
}

nav {
	float: right;
	margin: 1em;
	li {
		float: left;
		list-style-type: none;
		border: 1px $accent solid;
		border-right: none;
		padding: $margin-tiny 0;
		&:first-child {
			border-top-left-radius: 3px;
			border-bottom-left-radius: 3px;
		}
		&:last-child {
			border-right: 1px solid $accent;
			border-top-right-radius: 3px;
			border-bottom-right-radius: 3px;
		}
	}
}

footer {
	@extend %clearfix;
	margin: 0 10%;
	display: flex;
	justify-content: center;
	@media all and (max-width: 700px) {
		flex-direction: column;
	}

	div {
		@media all and (min-width: 700px) {
			width: percentage(1/3);
			margin: 0;
		}
		margin: 1em;
		float: left;
		padding: 0 5%;
	}

	li {
		list-style-type: none;
		margin: $margin-tiny;
	}
}

.content {
	margin: 2em;
}

.date {
	font-size: .8em;
	font-style: italic;
	color: transparentize($accent, .4);
}

.menu {
	margin: 2em;
	@extend %clearfix;
	li {
		list-style-type: none;
	}

	.dish{
		margin: 1%;
		@extend %clearfix;
		float: left;
		width: 98%;

		@media all and (min-width: 780px) {
			width: 48%;
		}
	}

	.name {
		font-size: 2em;
		float: left;
	}

	.contains {
		font-style: italic;
		color: transparentize($accent, .4);
		clear: left;
		float: left;
	}

	.price {
		float: right;
		font-size: 1.5em;
		position: top;
		margin: .5em;
	}
}

